--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=clash-grotesk@200,300,400,500,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/styles.css">
     <title>Apex Legends</title>
 </head>
 <body>
     <header class="header">
 
-        <label for="menu">
-            <input type="checkbox" name="menu" id="menu">
+        <label class="header__label" for="menu">
+            <input class="header__input" type="checkbox" name="menu" id="menu">
             <i class="bi bi-list"></i>
         </label>
 
@@ -21,12 +25,12 @@
 
         <nav class="nav">
             <header class="nav__header">
-                <figure class="header__figure">
-                    <img class="header__img" src="./assets/apex-logo.svg" alt="Apex Logo">
+                <figure class="nav__figure">
+                    <img class="nav__img" src="./assets/apex-logo.svg" alt="Apex Logo">
                 </figure>
     
-                <label for="menu-nav">
-                    <input type="checkbox" name="menu-nav" id="menu-nav">
+                <label class="nav__label" for="menu-nav">
+                    <input class="nav__input" type="checkbox" name="menu-nav" id="menu-nav">
                     <i class="bi bi-x-circle"></i>
                 </label>
             </header>
@@ -41,7 +45,7 @@
                 </li>
 
                 <li class="nav__list">
-                    <a href="#" class="nav__link">Breakoud</a>
+                    <a href="#" class="nav__link">Breakout</a>
                 </li>
 
                 <li class="nav__list">
@@ -64,7 +68,7 @@
 
         </nav>
 
-        <button class="cta">Descarga Gratis* <i class="bi bi-chevron-down"></i></button>
+        <button class="cta">Descarga Gratuita* <i class="bi bi-chevron-down"></i></button>
     </header>
 </body>
 </html>
