--- a/index.html
+++ b/index.html
@@ -70,5 +70,7 @@
 
         <button class="cta">Descarga Gratuita* <i class="bi bi-chevron-down"></i></button>
     </header>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
