Agregar primera seccion del main

--- a/index.html
+++ b/index.html
@@ -71,6 +71,30 @@
         <button class="cta">Descarga Gratuita* <i class="bi bi-chevron-down"></i></button>
     </header>
 
+    <main class="main">
+
+        <section class="intro">
+            
+            <div class="intro__info">
+                <figure class="intro__logo">
+                    <img class="intro__img" src="./assets/apex-logo.svg" alt="Apex logo">
+                </figure>
+                <p class="intro__paragraph">Drop Hotter in Apex Legends™: Breakout!</p>
+                <button class="cta">Play Free Now*</button>
+                <button class="cta">Watch Gameplay trailer <i class="bi bi-play"></i></button>
+            </div>
+
+            <video class="itro__video" muted autoplay loop>
+                <source src="./assets/apex-video.mp4" type="video/mp4">
+            </video>
+            <div class="intro__capa"></div>
+        </section>
+
+        <section class="">
+
+        </section>
+    </main>
+
     <script src="./js/app.js"></script>
 </body>
 </html>
