Agregar seccion cards, maquetacion y estilos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,54 @@
             <div class="intro__capa"></div>
         </section>
 
-        <section class="">
+        <section class="drop">
+
+            <figure class="drop__figure">
+                <img class="drop__img" src="./assets/apex-img-2.jpg" alt="IMG Drop">
+            </figure>
+
+            <div class="drop__texts">
+                <h2 class="drop__title">DROP HOTTER</h2>
+                <p class="drop__paragraph">The Games are going into overdrive! Ready up for Apex Legends: Breakout!</p>
+
+                <button class="cta drop__cta">Learn More</button>
+            </div>
+
+        </section>
+
+        <section class="cards">
+            <h2 class="cards__title">Latest News</h2>
+        
+            <div class="card__container">
+
+                <div class="card">
+                    <img src="./assets/card-1.png" alt="" class="card__img">
+                    <div class="card__texts">
+                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Apr 18, 2024</span></h2>
+                        <h3 class="card__title">Storm the streets in the Urban Assault Collection Event</h3>
+                        <p class="card__paragraph">Storm the streets in the Urban Assault Collection Event</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/card-2.png" class="card__img">
+                    <div class="card__texts">
+                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Apr 18, 2024</span></h2>
+                        <h3 class="card__title">Storm the streets in the Urban Assault Collection Event</h3>
+                        <p class="card__paragraph">Storm the streets in the Urban Assault Collection Event</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/card-3.png" class="card__img">
+                    <div class="card__texts">
+                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Apr 18, 2024</span></h2>
+                        <h3 class="card__title">Storm the streets in the Urban Assault Collection Event</h3>
+                        <p class="card__paragraph">Storm the streets in the Urban Assault Collection Event</p>
+                    </div>
+                </div>
+
+            </div>
 
         </section>
     </main>
