Agregar seccion 3 maquetacion y estilos

--- a/index.html
+++ b/index.html
@@ -122,23 +122,56 @@
                 <div class="card">
                     <img src="./assets/card-2.png" class="card__img">
                     <div class="card__texts">
-                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Apr 18, 2024</span></h2>
-                        <h3 class="card__title">Storm the streets in the Urban Assault Collection Event</h3>
-                        <p class="card__paragraph">Storm the streets in the Urban Assault Collection Event</p>
+                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Mar 21, 2024</span></h2>
+                        <h3 class="card__title">Rule the underground in the Shadow Society Event</h3>
+                        <p class="card__paragraph">Rule the underground in the Shadow Society Event</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <img src="./assets/card-3.png" class="card__img">
                     <div class="card__texts">
-                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Apr 18, 2024</span></h2>
-                        <h3 class="card__title">Storm the streets in the Urban Assault Collection Event</h3>
-                        <p class="card__paragraph">Storm the streets in the Urban Assault Collection Event</p>
+                        <h2 class="card__apex">Apex Legends <span class="card__apex-span">Mar 4, 2024</span></h2>
+                        <h3 class="card__title">The Hunt is on in the Inner Beast Collection Event</h3>
+                        <p class="card__paragraph">The Hunt is on in the Inner Beast Collection Event</p>
                     </div>
                 </div>
 
             </div>
 
+        </section>
+
+        <section class="beyond">
+            <h2 class="beyond__title">BEYOND BATTLE ROYALE</h2>
+            <p class="beyond__paragraph">Show 'em what you're made of in Apex Legends, a free-to-play hero shooter where contenders from across the Frontier team up to battle for glory, fame, and fortune.</p>
+
+            <div class="card2__container">
+
+                <div class="card2">
+                    <img src="./assets/card2-1.png" alt="" class="card2__img">
+                    <div class="card2__texts">
+                        <h3 class="card2__title">Legendary Characters</h3>
+                        <p class="card2__paragraph">Choose your Legend, team up, and combine your unique skills to be the last squad standing.</p>
+                    </div>
+                </div>
+
+                <div class="card2">
+                    <img src="./assets/card2-2.png" alt="" class="card2__img">
+                    <div class="card2__texts">
+                        <h3 class="card2__title">The Ultimate Squad</h3>
+                        <p class="card2__paragraph">Explore a growing roster of powerful Legends, each with their own unique personality, strengths, and abilities.</p>
+                    </div>
+                </div>
+
+                <div class="card2">
+                    <img src="./assets/card2-3.png" alt="" class="card2__img">
+                    <div class="card2__texts">
+                        <h3 class="card2__title">Strategic Combat</h3>
+                        <p class="card2__paragraph">Master an expanding assortment of powerful weapons, unique abilities, and game-changing equipment in a variety of enviroments and limited-time and permanent modes.</p>
+                    </div>
+                </div>
+
+            </div>
         </section>
     </main>
 
