--- a/index.html
+++ b/index.html
@@ -173,6 +173,38 @@
 
             </div>
         </section>
+
+        <section class="form">
+            <h2 class="form__title">SIGN UP FOR APEX LEGENDS™ NEWS</h2>
+            <p class="form__parargaph">Sign up today to receive the latest Apex Legends™ news, updates, behind-the-scenes content, offers, and more (including other EA news, products, events, and promotions) by email.</p>
+
+            <form action="#" class="form__form">
+                <label class="form__label" for="email">
+                    <input class="form__input" type="email" id="email">
+                    <span>Email</span>
+                </label>
+
+                <label class="form__label" for="birthdate">
+                    <input class="form__input" type="date" id="birthdate">
+                    <span>Birthdate</span>
+                </label>
+
+                <label class="form__label" for="option">
+                    <select name="select">
+                        <option value="1">United States</option>
+                        <option value="1">Argentina</option>
+                        <option value="1">Brazil</option>
+                    </select>
+                </label>
+
+                <label for="form__label">
+                    <input type="checkbox" name="politica">
+                    I can unsubscribe at any time by changing my email preferences, contacting privacyadmin.ea.com, or writing to Electronic Arts Inc., ATTN: Email Opt-Out, 209 Redwood Shores Pkwy, Redwood City, CA, 94065, USA.
+                </label>
+
+                <input class="cta" type="submit" value="Sign Up">
+            </form>
+        </section>
     </main>
 
     <script src="./js/app.js"></script>
