Agregar maquetacion a seccion play con estilos

--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
             <div class="icons">
                 <img src="./assets/logos.svg" alt="Iconos Apex" class="icons__img">
             </div>
+
+            <h2 class="play__title">PLAY FOR FREE*</h2>
+            <h3 class="play__console">On PlayStation 4, PlayStation 5, Xbox One, Xbox Series X|S, Nintendo Switch, and PC via EA App and Steam</h3>
+
+            <button class="cta play__cta">PLAY FREE NOW</button>
+            <p class="play__paragraph">*Applicable platform account and platform subscription (sold separately) may be required. Persistent internet connection and EA account required. Age restrictions apply. Includes in-game purchases.</p>
         </section>
     </main>
 
