Agregar maquetacion HTML, seccion about con estilos

--- a/index.html
+++ b/index.html
@@ -219,7 +219,67 @@
             <button class="cta play__cta">PLAY FREE NOW</button>
             <p class="play__paragraph">*Applicable platform account and platform subscription (sold separately) may be required. Persistent internet connection and EA account required. Age restrictions apply. Includes in-game purchases.</p>
         </section>
+
+        <section class="about">
+            <div class="about__links">
+                <div class="about_link">
+                    <ul class="about__lists">
+                        <li class="about__list">
+                            <a href="#" class="about__link">Home</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">Apex Legends Global Series</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">About</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">Legends</a>
+                        </li>
+                    </ul>
+                    <ul class="about__lists">
+                        <li class="about__list">
+                            <a href="#" class="about__link">FAQ</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">News</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">Media</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">Forums</a>
+                        </li>
+                    </ul>
+                </div>
+                
+                <div class="about__social">
+                    <h2 class="social__title">JOIN THE CONVERSATION</h2>
+                    <div class="social__icons">
+                        <i class="bi bi-twitter-x"></i>
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-tiktok"></i>
+                        <i class="bi bi-twitch"></i>
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-youtube"></i>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="about__images">
+                <div class="images">
+                    <img class="images__img" src="./assets/img1.png" alt="Apex Legends">
+                    <img class="images__img" src="./assets/img2.svg" alt="Apex Legends">
+                    <img class="images__img" src="./assets/img3.png" alt="Global Series">
+                </div>
+                <img class="about__img" src="./assets/img4.svg" alt="Teen ESRB">
+            </div>
+
+        </section>
     </main>
+
+    <footer class="footer"></footer>
 
     <script src="./js/app.js"></script>
 </body>
