--- a/index.html
+++ b/index.html
@@ -279,7 +279,56 @@
         </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <img src="./assets/img5.png" alt="Imagen EA" class="footer__img">
+
+        <div class="footer__links">
+            <ul class="footer__lists">
+                <li class="footer__list">
+                    <a href="#" class="footer__link">BROWSE GAMES</a>
+                </li>
+                <li class="footer__list">
+                    <a href="#" class="footer__link">ABOUT</a>
+                </li>
+                <li class="footer__list">
+                    <a href="#" class="footer__link">SUPPORT</a>
+                </li>
+                <li class="footer__list">
+                    <a href="#" class="footer__link">SHOP ON EA APP</a>
+                </li>
+                <li class="footer__list">
+                    <a href="#" class="footer__link">ACCESSIBILITY</a>
+                </li>
+            </ul>
+        </div>
+
+        <select class="footer__select" name="language" id="languaje">
+            <option value="1">United State</option>
+            <option value="1">España</option>
+            <option value="1">Mexico</option>
+            <option value="1">Brazil</option>
+        </select>
+
+        <div class="footer__privacy">
+            <ul class="privacy__lists">
+                <li class="privacy__list">
+                    <a href="#" class="footer__link">Legal & Privacy</a>
+                </li>
+                <li class="privacy__list">
+                    <a href="#" class="privacy__link">User Agreement</a>
+                </li>
+                <li class="privacy__list">
+                    <a href="#" class="privacy__link">Privacy & Cookie Policy (Your Privacy Rights)</a>
+                </li>
+                <li class="privacy__list">
+                    <a href="#" class="privacy__link">Cookie Preferences</a>
+                </li>
+            </ul>
+        </div>
+
+        <p class="footer__paragraph">&copy; 2024 Electronic Arts Inc.</p>
+        <img src="./assets/img6.svg" alt="Imagen EA" class="footer__img-end">
+    </footer>
 
     <script src="./js/app.js"></script>
 </body>
