--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
             <ul class="nav__lists">
                 <li class="nav__list">
                     <a href="#" class="nav__link">About</a>
+                    <i class="bi bi-chevron-down"></i>
                 </li>
 
                 <li class="nav__list">
                     <a href="#" class="nav__link">Modes</a>
+                    <i class="bi bi-chevron-down"></i>
                 </li>
 
                 <li class="nav__list">
                     <a href="#" class="nav__link">Breakout</a>
+                    <i class="bi bi-chevron-down"></i>
                 </li>
 
                 <li class="nav__list">
@@ -54,14 +57,17 @@
 
                 <li class="nav__list">
                     <a href="#" class="nav__link">News & media</a>
+                    <i class="bi bi-chevron-down"></i>
                 </li>
 
                 <li class="nav__list">
                     <a href="#" class="nav__link">Community</a>
+                    <i class="bi bi-chevron-down"></i>
                 </li>
 
                 <li class="nav__list">
                     <a href="#" class="nav__link">Apex legends global series</a>
+                    <i class="bi bi-chevron-down"></i>
                 </li>
 
             </ul>
@@ -69,6 +75,14 @@
         </nav>
 
         <button class="cta">Descarga Gratuita* <i class="bi bi-chevron-down"></i></button>
+        <div class="cta__links">
+            <a href="#" class="cta__link">The EA App For Windows</a>
+            <a href="#" class="cta__link">Steam on PC</a>
+            <a href="#" class="cta__link">PlayStation®4</a>
+            <a href="#" class="cta__link">PlayStation®5</a>
+            <a href="#" class="cta__link">Xbox</a>
+            <a href="#" class="cta__link">Nintendo Switch</a>
+        </div>
     </header>
 
     <main class="main">
