Agregar video mobile y video desktop

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
             </div>
 
             <video class="itro__video" muted autoplay loop>
-                <source src="./assets/apex-video.mp4" type="video/mp4">
+                <source src="./assets/video-mobile.mp4" type="video/mp4" media="(max-width: 768px)">
+                <source src="./assets/video-tablet.mp4" type="video/mp4" media="(min-width: 769px)">
+                Tu navegador no soporta el formato del video
             </video>
             <div class="intro__capa"></div>
         </section>
