--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <section class="form">
             <div class="form__texts">
                 <h2 class="form__title">SIGN UP FOR APEX LEGENDS™ NEWS</h2>
-                <p class="form__parargaph">Sign up today to receive the latest Apex Legends™ news, updates, behind-the-scenes content, offers, and more (including other EA news, products, events, and promotions) by email.</p>
+                <p class="form__paragraph">Sign up today to receive the latest Apex Legends™ news, updates, behind-the-scenes content, offers, and more (including other EA news, products, events, and promotions) by email.</p>
             </div>
 
             <form action="#" class="form__form">
@@ -258,24 +258,24 @@
                             <a href="#" class="about__link">Home</a>
                         </li>
                         <li class="about__list">
-                            <a href="#" class="about__link">Apex Legends Global Series</a>
-                        </li>
-                        <li class="about__list">
                             <a href="#" class="about__link">About</a>
                         </li>
-                        <li class="about__list">
-                            <a href="#" class="about__link">Legends</a>
-                        </li>
-                    </ul>
-                    <ul class="about__lists">
                         <li class="about__list">
                             <a href="#" class="about__link">FAQ</a>
                         </li>
                         <li class="about__list">
-                            <a href="#" class="about__link">News</a>
+                            <a href="#" class="about__link">Media</a>
+                        </li>
+                    </ul>
+                    <ul class="about__lists">
+                        <li class="about__list">
+                            <a href="#" class="about__link">Apex Legends Global Series</a>
                         </li>
                         <li class="about__list">
-                            <a href="#" class="about__link">Media</a>
+                            <a href="#" class="about__link">Legends</a>
+                        </li>
+                        <li class="about__list">
+                            <a href="#" class="about__link">News</a>
                         </li>
                         <li class="about__list">
                             <a href="#" class="about__link">Forums</a>
